--- a/front-fix/src/styles/extranet/company/mission-details.module.css
+++ b/front-fix/src/styles/extranet/company/mission-details.module.css
@@ -30,7 +30,7 @@
 .titleContainer h1 {
   margin: 0;
   font-size: 2rem;
-  color: #333;
+  color: goldenrod;
 }
 
 .status {
@@ -74,7 +74,7 @@
 .section h2 {
   margin: 0 0 1rem 0;
   font-size: 1.2rem;
-  color: #333;
+  color: goldenrod;
 }
 
 .details {
