--- a/front-fix/src/styles/extranet/sidebar.module.css
+++ b/front-fix/src/styles/extranet/sidebar.module.css
@@ -23,6 +23,10 @@
   color: inherit;
 }
 
+.logo a:hover {
+  color: goldenrod
+}
+
 .nav {
   flex: 1;
   display: flex;
@@ -35,19 +39,19 @@
   align-items: center;
   padding: 0.75rem 1rem;
   text-decoration: none;
-  color: #4b5563;
+  background-color: goldenrod;
   border-radius: 0.5rem;
   transition: all 0.2s;
 }
 
 .link:hover {
-  background-color: #f3f4f6;
-  color: #111827;
+  background-color: goldenrod;
+  color:white
 }
 
 .active {
-  background-color: #f3f4f6;
-  color: #111827;
+  background-color: goldenrod;
+  border: solid 2px black;
   font-weight: 500;
 }
 
