--- a/front-fix/src/styles/site/auth.module.css
+++ b/front-fix/src/styles/site/auth.module.css
@@ -24,13 +24,13 @@
   margin-top: 1.5rem;
   font-size: 1.875rem;
   font-weight: 800;
-  color: #111827;
+  color: goldenrod;
 }
 
 .authSubtitle {
   margin-top: 0.5rem;
   font-size: 0.875rem;
-  color: #6b7280;
+  color: black;
 }
 
 .authForm {
@@ -72,13 +72,14 @@
   font-size: 0.875rem;
   font-weight: 500;
   color: white;
-  background-color: #3B82F6;
+  background-color: goldenrod;
   cursor: pointer;
   transition: background-color 0.2s;
 }
 
 .submitButton:hover {
-  background-color: #2563EB;
+  background-color: goldenrod;
+  color: black;
 }
 
 .submitButton:focus {
@@ -95,17 +96,18 @@
   margin-top: 1rem;
   font-size: 0.875rem;
   text-align: center;
+  color: black;
 }
 
 .switchLink a {
-  color: #3B82F6;
+  color: goldenrod;
   font-weight: 500;
   text-decoration: none;
   transition: color 0.2s;
 }
 
 .switchLink a:hover {
-  color: #2563EB;
+  
 }
 
 .errorMessage {
