--- a/front-fix/src/styles/site/testimonials.module.css
+++ b/front-fix/src/styles/site/testimonials.module.css
@@ -8,6 +8,7 @@
   font-size: 2.5rem;
   margin-bottom: 3rem;
   font-weight: 700;
+  color: black;
 }
 
 .testimonialsGrid {
@@ -42,6 +43,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  color: goldenrod;
 }
 
 .testimonialContent {
