--- a/front-fix/src/styles/components/MainHeader.css
+++ b/front-fix/src/styles/components/MainHeader.css
@@ -1,7 +1,8 @@
 .main-header {
   background-color: var(--white);
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  position: fixed;
+  background-color: black;
+  height: 100px;
   top: 0;
   left: 0;
   right: 0;
@@ -40,11 +41,11 @@
   font-weight: 500;
   text-decoration: none;
   transition: color 0.3s ease;
-  font-size: 1rem;
+  font-size: 1.5rem;
 }
 
 .main-nav a:hover {
-  color: var(--secondary-blue);
+  color: goldenrod
 }
 
 .auth-buttons {
@@ -68,7 +69,7 @@
 
 .btn-secondary:hover {
   background-color: var(--dark-blue);
-  color: var(--white);
+  color: goldenrod
 }
 
 .btn-primary {
